--- a/package.json
+++ b/package.json
@@ -1,43 +1,21 @@
 {
-  "name": "maketime",
-  "version": "0.1.0",
+  "name": "benibienz",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
-    "react-big-calendar": "^0.28.6",
-    "react-dom": "^16.14.0",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "@material-ui/core": "latest",
+    "clsx": "latest",
+    "next": "latest",
+    "next-on-netlify": "latest",
+    "prop-types": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "postbuild": "next-on-netlify",
+    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest"
   }
 }
